# solana-key-manager

./: .gitignore  Cargo.toml  README.md  README_CN.md
.github/workflows/: test.yml
src/: crypto.rs  keygen.rs  main.rs  sign.rs  wallet.rs
