[package]
name = "solana-key-manager"
version = "0.1.0"
edition = "2021"
description = "Secure Solana keypair manager with BIP39 mnemonics, AES-256-GCM encryption, and offline signing."
license = "MIT"

[[bin]]
name = "solana-km"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bs58 = "0.5"
colored = "3"
anyhow = "1"
thiserror = "2"
rand = "0.8"
bip39 = { version = "2", features = ["rand"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
pbkdf2 = "0.12"
rpassword = "7"

[dev-dependencies]
tempfile = "3"
